--- a/Python/Basics/built_in_functions.ipynb
+++ b/Python/Basics/built_in_functions.ipynb
@@ -139,19 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "5.77\n",
-      "150.55\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = round(5.76543)\n",
     "print(x)\n",
@@ -262,21 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Osama -\n",
-      "- Ahmad -\n",
-      "- Bakri -\n",
-      "==============================\n",
-      "['- Osama -', '- Ahmad -', '- Bakri -']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def formattext(text):\n",
     "    return f\"- {text} -\"\n",
@@ -300,19 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-Osama-\n",
-      "-Ahmad-\n",
-      "-Bakri-\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use Lambda with map function\n",
     "myTexts=[\"   osama     \",\"   ahmad\",\"bakri  \"]\n",
@@ -334,19 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n",
-      "20\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def checkNumber(num):\n",
     "    if num >10:\n",
@@ -359,19 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18\n",
-      "24\n",
-      "32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using filter function to check if the age over 18\n",
     "ages = [5, 12, 17, 18, 24, 32]\n",
@@ -387,20 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n",
-      "10\n",
-      "20\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Easy way \n",
     "def checkNumber(num):\n",
@@ -412,19 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Omar\n",
-      "Obayda\n",
-      "['Omar', 'Obayda']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def checkName(name):\n",
     "    return name.startswith(\"O\")\n",
@@ -437,18 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bakri\n",
-      "Bissan\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using lambda function\n",
     "myNames=[\"Omar\",\"Obayda\",\"Bakri\",\"Koko\",\"Bissan\"]\n",
@@ -471,17 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "130\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# It used to be built in function but in new oython versions we have to import sth\n",
     "from functools import reduce\n",
@@ -494,17 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "130\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lets do it using lambda function\n",
     "result=reduce((lambda num1,num2:num1+num2),numbers)\n",
@@ -513,21 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'enumerate'>\n",
-      "(0, 'Html')\n",
-      "(1, 'Css')\n",
-      "(2, 'JS')\n",
-      "(3, 'PHP')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# enumerate(iterable,start=0)\n",
     "mySkills=[\"Html\",\"Css\",\"JS\",\"PHP\"]\n",
@@ -539,20 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(30, 'Html')\n",
-      "(31, 'Css')\n",
-      "(32, 'JS')\n",
-      "(33, 'PHP')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we can start the counter with different number\n",
     "for skill in enumerate(mySkills,30):\n",
@@ -561,20 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 - Html\n",
-      "1 - Css\n",
-      "2 - JS\n",
-      "3 - PHP\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We can loop on my counter and the skills\n",
     "for counter,skill in enumerate(mySkills):\n",
@@ -583,61 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function reduce in module _functools:\n",
-      "\n",
-      "reduce(...)\n",
-      "    reduce(function, iterable[, initial]) -> value\n",
-      "\n",
-      "    Apply a function of two arguments cumulatively to the items of a sequence\n",
-      "    or iterable, from left to right, so as to reduce the iterable to a single\n",
-      "    value.  For example, reduce(lambda x, y: x+y, [1, 2, 3, 4, 5]) calculates\n",
-      "    ((((1+2)+3)+4)+5).  If initial is present, it is placed before the items\n",
-      "    of the iterable in the calculation, and serves as a default when the\n",
-      "    iterable is empty.\n",
-      "\n",
-      "Help on class reversed in module builtins:\n",
-      "\n",
-      "class reversed(object)\n",
-      " |  reversed(sequence, /)\n",
-      " |\n",
-      " |  Return a reverse iterator over the values of the given sequence.\n",
-      " |\n",
-      " |  Methods defined here:\n",
-      " |\n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |\n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |\n",
-      " |  __length_hint__(...)\n",
-      " |      Private method returning an estimate of len(list(it)).\n",
-      " |\n",
-      " |  __next__(self, /)\n",
-      " |      Implement next(self).\n",
-      " |\n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling.\n",
-      " |\n",
-      " |  __setstate__(...)\n",
-      " |      Set state information for unpickling.\n",
-      " |\n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |\n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# help()   => we use it to get help\n",
     "help(reduce)\n",
@@ -646,14 +462,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<reversed object at 0x000001E90A973310>\n",
+      "<reversed object at 0x000002C1311A9BA0>\n",
       "i\n",
       "r\n",
       "k\n",
