--- a/Python/Basics/Function.ipynb
+++ b/Python/Basics/Function.ipynb
@@ -119,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "Python => 50%\n",
+      "Pandas => 30%\n",
+      "ML => 10%\n"
+     ]
+    }
+   ],
    "source": [
     "# KWArgs ==> key, word argument ==> Dictionary\n",
     "def show_skills(**skills):\n",
@@ -163,7 +174,7 @@
     "def show_skills(name,*skills,**skillWithprogress):\n",
     "    print(f\"Hello {name} your skills are:\")\n",
     "    for skill in skills:\n",
-    "        pritn(f\"-{skill}\")\n",
+    "        print(f\"-{skill}\")\n",
     "    for skill,progress in skillWithprogress.items():\n",
     "        print(f\"{skill} ==> {progress}\")\n",
     "show_skills(\"Bakri\")# We notice we can call the function without passing args\n",
