--- a/Python/Basics/ManyTopics.ipynb
+++ b/Python/Basics/ManyTopics.ipynb
@@ -156,6 +156,152 @@
     "myName=input(\"Please enter your name? \").strip().capitalize()\n",
     "print(myName)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Practical => Loop on many Iterators with zip():\n",
+    "###### zip() returns a zip object contains all objects.\n",
+    "###### zip() length is the length of lowest object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x0000028EE6449D40>\n",
+      "(1, 'A')\n",
+      "(2, 'B')\n",
+      "(3, 'C')\n",
+      "List 1 item => 1\n",
+      "List 2 item => A\n",
+      "List 1 item => 2\n",
+      "List 2 item => B\n",
+      "List 1 item => 3\n",
+      "List 2 item => C\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2,3,4,5]\n",
+    "list2=[\"A\",\"B\",\"C\"]\n",
+    "ultimatelist=zip(list1,list2)\n",
+    "print(ultimatelist)\n",
+    "for item in ultimatelist:\n",
+    "    print(item)\n",
+    "\n",
+    "for item1,item2 in zip(list1,list2):\n",
+    "    print(\"List 1 item =>\",item1)\n",
+    "    print(\"List 2 item =>\",item2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List 1 item => 1\n",
+      "List 2 item => A\n",
+      "tuple 1 item => Man\n",
+      "Dict 1 Key => Name Value => Bakri\n",
+      "List 1 item => 2\n",
+      "List 2 item => B\n",
+      "tuple 1 item => Woman\n",
+      "Dict 1 Key => Age Value => 31\n",
+      "List 1 item => 3\n",
+      "List 2 item => C\n",
+      "tuple 1 item => Girl\n",
+      "Dict 1 Key => Country Value => Syria\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1=(\"Man\",\"Woman\",\"Girl\",\"Boy\")\n",
+    "dict1={\"Name\":\"Bakri\",\"Age\":31,\"Country\":\"Syria\"}\n",
+    "for item1,item2,item3, item4 in zip(list1,list2,tuple1,dict1):\n",
+    "    print(\"List 1 item =>\",item1)\n",
+    "    print(\"List 2 item =>\",item2)\n",
+    "    print(\"tuple 1 item =>\",item3)\n",
+    "    print(\"Dict 1 Key =>\",item4,\"Value =>\",dict1[item4])\n",
+    "    #dict1[item4] to get my value!\n",
+    "    # it will iterates just three elements cause I have the lowest object three"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Doc String & Commenting vs Documenting:\n",
+    "###### [1] Documentation string for class, Module or function.\n",
+    "###### [2] Can bes accessed from the help and doc attributes.\n",
+    "###### [3] Maade for understanding the functionality of the complex code\n",
+    "###### [4] There is one line and multiple line doc strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Bakri\n",
+      "This is a function to say Hello \n",
+      "my_function\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(name):\n",
+    "    '''This is a function to say Hello ''' # This is single line doc string.\n",
+    "    print(f\"Hello {name}\")\n",
+    "my_function(\"Bakri\")\n",
+    "# The doc string is written inside ''' '''\n",
+    "# print(dir(my_function))\n",
+    "print(my_function.__doc__) # This will print me my doc string of that function.\n",
+    "print(my_function.__name__)# This will print me the name of my function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function my_function in module __main__:\n",
+      "\n",
+      "my_function(name)\n",
+      "    This is a function to say Hello\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the help function u can as well get your doc string.\n",
+    "help(my_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
