--- a/Python/Basics/ManyTopics.ipynb
+++ b/Python/Basics/ManyTopics.ipynb
@@ -297,6 +297,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Installing and use Pylint for better code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Bakri\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First of all install pylint => pip install pylint\n",
+    "def sayHello(name):\n",
+    "    print (f\"Hello {name}\")\n",
+    "sayHello(\"Bakri\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### To check if your code correct use pylint.exe file_path\n",
+    "###### To have further information about pylint visit https://pypi.org/project/pylint/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Type Hinting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Bakri\n",
+      "Hello 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello(name) -> str :\n",
+    "    print(f\"Hello {name}\")\n",
+    "say_hello(\"Bakri\")\n",
+    "say_hello(10)#notice here even when my hint is a string still just a hint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate(n1,n2) -> int:\n",
+    "    print(n1+n2)\n",
+    "calculate(90,10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
