--- a/Python/Basics/Decoraters.ipynb
+++ b/Python/Basics/Decoraters.ipynb
@@ -145,9 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.375\n",
+      "the denominator is null! The divide cant be done!\n"
+     ]
+    }
+   ],
    "source": [
     "def divide_smart(func):\n",
     "    def inner(a,b):\n",
@@ -175,9 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***************\n",
+      "%%%%%%%%%%%%%%%\n",
+      "Hello\n",
+      "%%%%%%%%%%%%%%%\n",
+      "***************\n"
+     ]
+    }
+   ],
    "source": [
     "def star(func):\n",
     "    def inner(*args, **kwargs):\n",
